# inferaived

./: Cargo.toml
.github/skills/wgsl-validation/: SKILL.md
src/: conv_silu.rs  delta_rule.rs  embedding_lookup.rs  lib.rs  main.rs  mamba_scan.rs  mul_mat.rs  norm.rs  rope.rs
src/ggml-wgsl-shaders/: README.md
src/wgsl-shaders/: TODO.md  delta_rule.wgsl  depthwise_causal_conv_silu.wgsl  get_rows.wgsl  mamba_scan.wgsl  mul_mat_reg_tile.wgsl  norm_scale.wgsl  rms_norm.wgsl  rope.wgsl
